# llmtrace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: bench_sinks.py
docs/: api_reference.md  configuration.md  enrichment.md  providers.md  quickstart.md  sinks.md  tracing-conventions.md
examples/: _common.py  agent_tracing.py  datadog_tracing.py  docker-compose.yaml  langfuse_tracing.py  otel-collector-config.yaml  otlp_tracing.py  production_setup.py  quickstart.py  real_test_otlp_datadog.py
src/llmtrace/: __init__.py  _logging.py  config.py  models.py  pricing.py  protocols.py
src/llmtrace/capture/: __init__.py  context.py  decorator.py  extractors.py  tool_decorator.py
src/llmtrace/instruments/: __init__.py  _base.py  anthropic.py  openai.py
src/llmtrace/sinks/: __init__.py  base.py  callback.py  console.py  datadog.py  jsonfile.py  langfuse.py  multi.py  otlp.py  webhook.py
src/llmtrace/transform/: enrichment.py  normalizer.py
tests/: test_capture_context.py  test_capture_decorator.py  test_config.py  test_enrichment.py  test_extractors.py  test_instrument_anthropic.py  test_instrument_openai.py  test_integration.py  test_logging.py  test_models.py  test_normalizer.py  test_pricing.py  test_sink_console.py  test_sink_datadog.py  test_sink_jsonfile.py  test_sink_langfuse.py  test_sink_multi.py  test_sink_otlp.py  test_sink_webhook.py  test_tool_decorator.py
